setups view now renders/displays correctly for Safari on iOS

--- a/ngGuitarTech/src/app/components/setups/setups.component.css
+++ b/ngGuitarTech/src/app/components/setups/setups.component.css
@@ -1,6 +1,6 @@
 @media (min-width: 320px) and (max-width: 480px) {
   .setups-container {
-    height: 90vh;
+    height: 90svh;
     width: 100%;
     background-color: lightcoral;
     overflow-y: scroll;
